myanalyzer.output
Terminals unused in grammar

   KW_TRUE
   KW_FALSE
   KW_START


State 5 conflicts: 1 reduce/reduce
State 24 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 data_types: TK_IDENT
    2           | TK_INT
    3           | TK_REAL
    4           | TK_STRING

    5 specialExpr: data_types
    6            | TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON

    9 notExpression: specialExpr
   10              | KW_NOT signExpression

   11 signExpression: notExpression
   12               | OP_PLUS notExpression
   13               | OP_MINUS notExpression

   14 multiplicativeExpression: signExpression
   15                         | multiplicativeExpression OP_MUL signExpression
   16                         | multiplicativeExpression OP_DIV signExpression
   17                         | multiplicativeExpression OP_MOD signExpression

   18 additiveExpression: multiplicativeExpression
   19                   | additiveExpression OP_PLUS multiplicativeExpression
   20                   | additiveExpression OP_MINUS multiplicativeExpression

   21 relationalExpression: additiveExpression
   22                     | relationalExpression OP_EQUALS additiveExpression
   23                     | relationalExpression OP_NOT_EQUALS additiveExpression
   24                     | relationalExpression OP_SMALLER additiveExpression
   25                     | relationalExpression OP_SMALLER_EQUALS additiveExpression

   26 logicalAndExpression: relationalExpression
   27                     | logicalAndExpression KW_OR relationalExpression
   28                     | logicalAndExpression KW_AND relationalExpression

   29 expression: logicalAndExpression

   30 __statement_list: __statement_list __statement
   31                 | __statement

   32 __statement: TK_IDENT OP_ASSIGN expression DEL_SEMICOLON
   33            | __selection
   34            | __iteration
   35            | __function
   36            | __return

   37 __function: TK_IDENT DEL_LEFT_PARENTESIS func_var_list DEL_RIGHT_PARENTESIS DEL_SEMICOLON

   38 func_var_list: %empty
   39              | expression
   40              | func_var_list DEL_COMMA expression

   41 __selection: KW_IF expression KW_THEN __statement_list KW_FI DEL_SEMICOLON
   42            | KW_IF expression KW_THEN __statement_list KW_ELSE __statement KW_FI DEL_SEMICOLON

   43 __iteration: KW_WHILE expression KW_LOOP __statement_list KW_POOL DEL_SEMICOLON

   44 __return: KW_RETURN DEL_SEMICOLON
   45         | KW_RETURN expression DEL_SEMICOLON

   46 input: global_declaration

   47 global_declaration: decl_list
   48                   | func_list_empty
   49                   | decl_list func_list_empty

   50 decl_list: decl_list decl
   51          | decl

   52 decl: KW_LET let_decl_body
   53     | KW_CONST const_decl_body

   54 const_decl_body: const_decl_list DEL_COLON type_spec DEL_SEMICOLON

   55 const_decl_list: const_decl_list DEL_COMMA const_decl_init
   56                | const_decl_init

   57 const_decl_init: decl_id OP_ASSIGN data_types

   58 let_decl_body: let_decl_list DEL_COLON type_spec DEL_SEMICOLON

   59 let_decl_list: let_decl_list DEL_COMMA let_decl_init
   60              | let_decl_init

   61 let_decl_init: decl_id
   62              | decl_id OP_ASSIGN data_types

   63 decl_id: TK_IDENT
   64        | TK_IDENT DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS

   65 type_spec: KW_INT
   66          | KW_BOOL
   67          | KW_REAL
   68          | KW_STRING

   69 func_list_empty: %empty
   70                | func_list

   71 func_list: KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS

   73 func_param_empty: %empty
   74                 | func_param_list DEL_COLON type_spec

   75 func_param_list: func_param
   76                | func_param_empty DEL_COMMA func_param

   77 func_param: TK_IDENT
   78           | TK_IDENT DEL_LEFT_BRACKETS DEL_RIGHT_BRACKETS

   79 func_ret: type_spec
   80         | DEL_LEFT_BRACKETS DEL_RIGHT_BRACKETS type_spec


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_IDENT (258) 1 6 32 37 63 64 77 78
TK_INT (259) 2 64
TK_REAL (260) 3
TK_STRING (261) 4
KW_INT (262) 65
KW_REAL (263) 67
KW_BOOL (264) 66
KW_STRING (265) 68
KW_TRUE (266)
KW_FALSE (267)
KW_IF (268) 41 42
KW_THEN (269) 41 42
KW_ELSE (270) 42
KW_FI (271) 41 42
KW_WHILE (272) 43
KW_LOOP (273) 43
KW_POOL (274) 43
KW_CONST (275) 53 71 72
KW_LET (276) 52
KW_RETURN (277) 44 45
KW_AND (278) 28
KW_OR (279) 27
KW_START (280)
KW_NOT (281) 10
OP_PLUS (282) 12 19
OP_MINUS (283) 13 20
OP_MUL (284) 15
OP_DIV (285) 16
OP_MOD (286) 17
OP_EQUALS (287) 22
OP_NOT_EQUALS (288) 23
OP_SMALLER (289) 24
OP_SMALLER_EQUALS (290) 25
OP_ASSIGN (291) 8 32 57 62
OP_ARROW (292) 71 72
DEL_SEMICOLON (293) 32 37 41 42 43 44 45 54 58
DEL_LEFT_PARENTESIS (294) 7 8 37
DEL_RIGHT_PARENTESIS (295) 7 8 37
DEL_COMMA (296) 40 55 59 76
DEL_LEFT_BRACKETS (297) 6 64 78 80
DEL_RIGHT_BRACKETS (298) 6 64 78 80
DEL_COLON (299) 8 54 58 74
DEL_LEFT_CURLY_BRACKETS (300) 71 72
DEL_RIGHT_CURLY_BRACKETS (301) 71 72


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
data_types (48)
    on left: 1 2 3 4, on right: 5 57 62
specialExpr (49)
    on left: 5 6 7 8, on right: 9 71 72
notExpression (50)
    on left: 9 10, on right: 11 12 13
signExpression (51)
    on left: 11 12 13, on right: 10 14 15 16 17
multiplicativeExpression (52)
    on left: 14 15 16 17, on right: 15 16 17 18 19 20
additiveExpression (53)
    on left: 18 19 20, on right: 19 20 21 22 23 24 25
relationalExpression (54)
    on left: 21 22 23 24 25, on right: 22 23 24 25 26 27 28
logicalAndExpression (55)
    on left: 26 27 28, on right: 27 28 29
expression (56)
    on left: 29, on right: 6 7 32 39 40 41 42 43 45
__statement_list (57)
    on left: 30 31, on right: 30 41 42 43 71 72
__statement (58)
    on left: 32 33 34 35 36, on right: 30 31 42
__function (59)
    on left: 37, on right: 35
func_var_list (60)
    on left: 38 39 40, on right: 37 40
__selection (61)
    on left: 41 42, on right: 33
__iteration (62)
    on left: 43, on right: 34
__return (63)
    on left: 44 45, on right: 36
input (64)
    on left: 46, on right: 0
global_declaration (65)
    on left: 47 48 49, on right: 46
decl_list (66)
    on left: 50 51, on right: 47 49 50
decl (67)
    on left: 52 53, on right: 50 51
const_decl_body (68)
    on left: 54, on right: 53
const_decl_list (69)
    on left: 55 56, on right: 54 55
const_decl_init (70)
    on left: 57, on right: 55 56
let_decl_body (71)
    on left: 58, on right: 52
let_decl_list (72)
    on left: 59 60, on right: 58 59
let_decl_init (73)
    on left: 61 62, on right: 59 60
decl_id (74)
    on left: 63 64, on right: 57 61 62 71 72
type_spec (75)
    on left: 65 66 67 68, on right: 54 58 74 79 80
func_list_empty (76)
    on left: 69 70, on right: 48 49
func_list (77)
    on left: 71 72, on right: 70 71
func_param_empty (78)
    on left: 73 74, on right: 8 76
func_param_list (79)
    on left: 75 76, on right: 74
func_param (80)
    on left: 77 78, on right: 75 76
func_ret (81)
    on left: 79 80, on right: 71 72


State 0

    0 $accept: . input $end
   46 input: . global_declaration
   47 global_declaration: . decl_list
   48                   | . func_list_empty
   49                   | . decl_list func_list_empty
   50 decl_list: . decl_list decl
   51          | . decl
   52 decl: . KW_LET let_decl_body
   53     | . KW_CONST const_decl_body
   69 func_list_empty: . %empty  [$end]
   70                | . func_list
   71 func_list: . KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | . KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    $default  reduce using rule 69 (func_list_empty)

    input               go to state 3
    global_declaration  go to state 4
    decl_list           go to state 5
    decl                go to state 6
    func_list_empty     go to state 7
    func_list           go to state 8


State 1

   53 decl: KW_CONST . const_decl_body
   54 const_decl_body: . const_decl_list DEL_COLON type_spec DEL_SEMICOLON
   55 const_decl_list: . const_decl_list DEL_COMMA const_decl_init
   56                | . const_decl_init
   57 const_decl_init: . decl_id OP_ASSIGN data_types
   63 decl_id: . TK_IDENT
   64        | . TK_IDENT DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS
   71 func_list: KW_CONST . decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | KW_CONST . decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS

    TK_IDENT  shift, and go to state 9

    const_decl_body  go to state 10
    const_decl_list  go to state 11
    const_decl_init  go to state 12
    decl_id          go to state 13


State 2

   52 decl: KW_LET . let_decl_body
   58 let_decl_body: . let_decl_list DEL_COLON type_spec DEL_SEMICOLON
   59 let_decl_list: . let_decl_list DEL_COMMA let_decl_init
   60              | . let_decl_init
   61 let_decl_init: . decl_id
   62              | . decl_id OP_ASSIGN data_types
   63 decl_id: . TK_IDENT
   64        | . TK_IDENT DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS

    TK_IDENT  shift, and go to state 9

    let_decl_body  go to state 14
    let_decl_list  go to state 15
    let_decl_init  go to state 16
    decl_id        go to state 17


State 3

    0 $accept: input . $end

    $end  shift, and go to state 18


State 4

   46 input: global_declaration .

    $default  reduce using rule 46 (input)


State 5

   47 global_declaration: decl_list .  [$end]
   49                   | decl_list . func_list_empty
   50 decl_list: decl_list . decl
   52 decl: . KW_LET let_decl_body
   53     | . KW_CONST const_decl_body
   69 func_list_empty: . %empty  [$end]
   70                | . func_list
   71 func_list: . KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | . KW_CONST decl_id specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    $end      reduce using rule 47 (global_declaration)
    $end      [reduce using rule 69 (func_list_empty)]
    $default  reduce using rule 47 (global_declaration)

    decl             go to state 19
    func_list_empty  go to state 20
    func_list        go to state 8


State 6

   51 decl_list: decl .

    $default  reduce using rule 51 (decl_list)


State 7

   48 global_declaration: func_list_empty .

    $default  reduce using rule 48 (global_declaration)


State 8

   70 func_list_empty: func_list .

    $default  reduce using rule 70 (func_list_empty)


State 9

   63 decl_id: TK_IDENT .  [TK_IDENT, TK_INT, TK_REAL, TK_STRING, OP_ASSIGN, DEL_LEFT_PARENTESIS, DEL_COMMA, DEL_COLON]
   64        | TK_IDENT . DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS

    DEL_LEFT_BRACKETS  shift, and go to state 21

    $default  reduce using rule 63 (decl_id)


State 10

   53 decl: KW_CONST const_decl_body .

    $default  reduce using rule 53 (decl)


State 11

   54 const_decl_body: const_decl_list . DEL_COLON type_spec DEL_SEMICOLON
   55 const_decl_list: const_decl_list . DEL_COMMA const_decl_init

    DEL_COMMA  shift, and go to state 22
    DEL_COLON  shift, and go to state 23


State 12

   56 const_decl_list: const_decl_init .

    $default  reduce using rule 56 (const_decl_list)


State 13

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
   57 const_decl_init: decl_id . OP_ASSIGN data_types
   71 func_list: KW_CONST decl_id . specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | KW_CONST decl_id . specialExpr func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    OP_ASSIGN            shift, and go to state 28
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types   go to state 30
    specialExpr  go to state 31


State 14

   52 decl: KW_LET let_decl_body .

    $default  reduce using rule 52 (decl)


State 15

   58 let_decl_body: let_decl_list . DEL_COLON type_spec DEL_SEMICOLON
   59 let_decl_list: let_decl_list . DEL_COMMA let_decl_init

    DEL_COMMA  shift, and go to state 32
    DEL_COLON  shift, and go to state 33


State 16

   60 let_decl_list: let_decl_init .

    $default  reduce using rule 60 (let_decl_list)


State 17

   61 let_decl_init: decl_id .  [DEL_COMMA, DEL_COLON]
   62              | decl_id . OP_ASSIGN data_types

    OP_ASSIGN  shift, and go to state 34

    $default  reduce using rule 61 (let_decl_init)


State 18

    0 $accept: input $end .

    $default  accept


State 19

   50 decl_list: decl_list decl .

    $default  reduce using rule 50 (decl_list)


State 20

   49 global_declaration: decl_list func_list_empty .

    $default  reduce using rule 49 (global_declaration)


State 21

   64 decl_id: TK_IDENT DEL_LEFT_BRACKETS . TK_INT DEL_RIGHT_BRACKETS

    TK_INT  shift, and go to state 35


State 22

   55 const_decl_list: const_decl_list DEL_COMMA . const_decl_init
   57 const_decl_init: . decl_id OP_ASSIGN data_types
   63 decl_id: . TK_IDENT
   64        | . TK_IDENT DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS

    TK_IDENT  shift, and go to state 9

    const_decl_init  go to state 36
    decl_id          go to state 37


State 23

   54 const_decl_body: const_decl_list DEL_COLON . type_spec DEL_SEMICOLON
   65 type_spec: . KW_INT
   66          | . KW_BOOL
   67          | . KW_REAL
   68          | . KW_STRING

    KW_INT     shift, and go to state 38
    KW_REAL    shift, and go to state 39
    KW_BOOL    shift, and go to state 40
    KW_STRING  shift, and go to state 41

    type_spec  go to state 42


State 24

    1 data_types: TK_IDENT .  [KW_INT, KW_REAL, KW_BOOL, KW_STRING, KW_THEN, KW_LOOP, KW_AND, KW_OR, OP_PLUS, OP_MINUS, OP_MUL, OP_DIV, OP_MOD, OP_EQUALS, OP_NOT_EQUALS, OP_SMALLER, OP_SMALLER_EQUALS, DEL_SEMICOLON, DEL_RIGHT_PARENTESIS, DEL_COMMA, DEL_LEFT_BRACKETS, DEL_RIGHT_BRACKETS]
    6 specialExpr: TK_IDENT . DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS

    DEL_LEFT_BRACKETS  shift, and go to state 43

    DEL_LEFT_BRACKETS  [reduce using rule 1 (data_types)]
    $default           reduce using rule 1 (data_types)


State 25

    2 data_types: TK_INT .

    $default  reduce using rule 2 (data_types)


State 26

    3 data_types: TK_REAL .

    $default  reduce using rule 3 (data_types)


State 27

    4 data_types: TK_STRING .

    $default  reduce using rule 4 (data_types)


State 28

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    8 specialExpr: OP_ASSIGN . DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
   57 const_decl_init: decl_id OP_ASSIGN . data_types

    TK_IDENT             shift, and go to state 44
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    DEL_LEFT_PARENTESIS  shift, and go to state 45

    data_types  go to state 46


State 29

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    7            | DEL_LEFT_PARENTESIS . expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
    9 notExpression: . specialExpr
   10              | . KW_NOT signExpression
   11 signExpression: . notExpression
   12               | . OP_PLUS notExpression
   13               | . OP_MINUS notExpression
   14 multiplicativeExpression: . signExpression
   15                         | . multiplicativeExpression OP_MUL signExpression
   16                         | . multiplicativeExpression OP_DIV signExpression
   17                         | . multiplicativeExpression OP_MOD signExpression
   18 additiveExpression: . multiplicativeExpression
   19                   | . additiveExpression OP_PLUS multiplicativeExpression
   20                   | . additiveExpression OP_MINUS multiplicativeExpression
   21 relationalExpression: . additiveExpression
   22                     | . relationalExpression OP_EQUALS additiveExpression
   23                     | . relationalExpression OP_NOT_EQUALS additiveExpression
   24                     | . relationalExpression OP_SMALLER additiveExpression
   25                     | . relationalExpression OP_SMALLER_EQUALS additiveExpression
   26 logicalAndExpression: . relationalExpression
   27                     | . logicalAndExpression KW_OR relationalExpression
   28                     | . logicalAndExpression KW_AND relationalExpression
   29 expression: . logicalAndExpression

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    KW_NOT               shift, and go to state 47
    OP_PLUS              shift, and go to state 48
    OP_MINUS             shift, and go to state 49
    OP_ASSIGN            shift, and go to state 50
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types                go to state 30
    specialExpr               go to state 51
    notExpression             go to state 52
    signExpression            go to state 53
    multiplicativeExpression  go to state 54
    additiveExpression        go to state 55
    relationalExpression      go to state 56
    logicalAndExpression      go to state 57
    expression                go to state 58


State 30

    5 specialExpr: data_types .

    $default  reduce using rule 5 (specialExpr)


State 31

   65 type_spec: . KW_INT
   66          | . KW_BOOL
   67          | . KW_REAL
   68          | . KW_STRING
   71 func_list: KW_CONST decl_id specialExpr . func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS func_list
   72          | KW_CONST decl_id specialExpr . func_ret OP_ARROW DEL_LEFT_CURLY_BRACKETS __statement_list DEL_RIGHT_CURLY_BRACKETS
   79 func_ret: . type_spec
   80         | . DEL_LEFT_BRACKETS DEL_RIGHT_BRACKETS type_spec

    KW_INT             shift, and go to state 38
    KW_REAL            shift, and go to state 39
    KW_BOOL            shift, and go to state 40
    KW_STRING          shift, and go to state 41
    DEL_LEFT_BRACKETS  shift, and go to state 59

    type_spec  go to state 60
    func_ret   go to state 61


State 32

   59 let_decl_list: let_decl_list DEL_COMMA . let_decl_init
   61 let_decl_init: . decl_id
   62              | . decl_id OP_ASSIGN data_types
   63 decl_id: . TK_IDENT
   64        | . TK_IDENT DEL_LEFT_BRACKETS TK_INT DEL_RIGHT_BRACKETS

    TK_IDENT  shift, and go to state 9

    let_decl_init  go to state 62
    decl_id        go to state 17


State 33

   58 let_decl_body: let_decl_list DEL_COLON . type_spec DEL_SEMICOLON
   65 type_spec: . KW_INT
   66          | . KW_BOOL
   67          | . KW_REAL
   68          | . KW_STRING

    KW_INT     shift, and go to state 38
    KW_REAL    shift, and go to state 39
    KW_BOOL    shift, and go to state 40
    KW_STRING  shift, and go to state 41

    type_spec  go to state 63


State 34

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
   62 let_decl_init: decl_id OP_ASSIGN . data_types

    TK_IDENT   shift, and go to state 44
    TK_INT     shift, and go to state 25
    TK_REAL    shift, and go to state 26
    TK_STRING  shift, and go to state 27

    data_types  go to state 64


State 35

   64 decl_id: TK_IDENT DEL_LEFT_BRACKETS TK_INT . DEL_RIGHT_BRACKETS

    DEL_RIGHT_BRACKETS  shift, and go to state 65


State 36

   55 const_decl_list: const_decl_list DEL_COMMA const_decl_init .

    $default  reduce using rule 55 (const_decl_list)


State 37

   57 const_decl_init: decl_id . OP_ASSIGN data_types

    OP_ASSIGN  shift, and go to state 66


State 38

   65 type_spec: KW_INT .

    $default  reduce using rule 65 (type_spec)


State 39

   67 type_spec: KW_REAL .

    $default  reduce using rule 67 (type_spec)


State 40

   66 type_spec: KW_BOOL .

    $default  reduce using rule 66 (type_spec)


State 41

   68 type_spec: KW_STRING .

    $default  reduce using rule 68 (type_spec)


State 42

   54 const_decl_body: const_decl_list DEL_COLON type_spec . DEL_SEMICOLON

    DEL_SEMICOLON  shift, and go to state 67


State 43

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    6            | TK_IDENT DEL_LEFT_BRACKETS . expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
    9 notExpression: . specialExpr
   10              | . KW_NOT signExpression
   11 signExpression: . notExpression
   12               | . OP_PLUS notExpression
   13               | . OP_MINUS notExpression
   14 multiplicativeExpression: . signExpression
   15                         | . multiplicativeExpression OP_MUL signExpression
   16                         | . multiplicativeExpression OP_DIV signExpression
   17                         | . multiplicativeExpression OP_MOD signExpression
   18 additiveExpression: . multiplicativeExpression
   19                   | . additiveExpression OP_PLUS multiplicativeExpression
   20                   | . additiveExpression OP_MINUS multiplicativeExpression
   21 relationalExpression: . additiveExpression
   22                     | . relationalExpression OP_EQUALS additiveExpression
   23                     | . relationalExpression OP_NOT_EQUALS additiveExpression
   24                     | . relationalExpression OP_SMALLER additiveExpression
   25                     | . relationalExpression OP_SMALLER_EQUALS additiveExpression
   26 logicalAndExpression: . relationalExpression
   27                     | . logicalAndExpression KW_OR relationalExpression
   28                     | . logicalAndExpression KW_AND relationalExpression
   29 expression: . logicalAndExpression

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    KW_NOT               shift, and go to state 47
    OP_PLUS              shift, and go to state 48
    OP_MINUS             shift, and go to state 49
    OP_ASSIGN            shift, and go to state 50
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types                go to state 30
    specialExpr               go to state 51
    notExpression             go to state 52
    signExpression            go to state 53
    multiplicativeExpression  go to state 54
    additiveExpression        go to state 55
    relationalExpression      go to state 56
    logicalAndExpression      go to state 57
    expression                go to state 68


State 44

    1 data_types: TK_IDENT .

    $default  reduce using rule 1 (data_types)


State 45

    8 specialExpr: OP_ASSIGN DEL_LEFT_PARENTESIS . func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
   73 func_param_empty: . %empty  [DEL_RIGHT_PARENTESIS, DEL_COMMA]
   74                 | . func_param_list DEL_COLON type_spec
   75 func_param_list: . func_param
   76                | . func_param_empty DEL_COMMA func_param
   77 func_param: . TK_IDENT
   78           | . TK_IDENT DEL_LEFT_BRACKETS DEL_RIGHT_BRACKETS

    TK_IDENT  shift, and go to state 69

    $default  reduce using rule 73 (func_param_empty)

    func_param_empty  go to state 70
    func_param_list   go to state 71
    func_param        go to state 72


State 46

   57 const_decl_init: decl_id OP_ASSIGN data_types .

    $default  reduce using rule 57 (const_decl_init)


State 47

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
    9 notExpression: . specialExpr
   10              | . KW_NOT signExpression
   10              | KW_NOT . signExpression
   11 signExpression: . notExpression
   12               | . OP_PLUS notExpression
   13               | . OP_MINUS notExpression

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    KW_NOT               shift, and go to state 47
    OP_PLUS              shift, and go to state 48
    OP_MINUS             shift, and go to state 49
    OP_ASSIGN            shift, and go to state 50
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types      go to state 30
    specialExpr     go to state 51
    notExpression   go to state 52
    signExpression  go to state 73


State 48

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
    9 notExpression: . specialExpr
   10              | . KW_NOT signExpression
   12 signExpression: OP_PLUS . notExpression

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    KW_NOT               shift, and go to state 47
    OP_ASSIGN            shift, and go to state 50
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types     go to state 30
    specialExpr    go to state 51
    notExpression  go to state 74


State 49

    1 data_types: . TK_IDENT
    2           | . TK_INT
    3           | . TK_REAL
    4           | . TK_STRING
    5 specialExpr: . data_types
    6            | . TK_IDENT DEL_LEFT_BRACKETS expression DEL_RIGHT_BRACKETS
    7            | . DEL_LEFT_PARENTESIS expression DEL_RIGHT_PARENTESIS
    8            | . OP_ASSIGN DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON
    9 notExpression: . specialExpr
   10              | . KW_NOT signExpression
   13 signExpression: OP_MINUS . notExpression

    TK_IDENT             shift, and go to state 24
    TK_INT               shift, and go to state 25
    TK_REAL              shift, and go to state 26
    TK_STRING            shift, and go to state 27
    KW_NOT               shift, and go to state 47
    OP_ASSIGN            shift, and go to state 50
    DEL_LEFT_PARENTESIS  shift, and go to state 29

    data_types     go to state 30
    specialExpr    go to state 51
    notExpression  go to state 75


State 50

    8 specialExpr: OP_ASSIGN . DEL_LEFT_PARENTESIS func_param_empty DEL_RIGHT_PARENTESIS DEL_COLON

    DEL_LEFT_PARENTESIS  shift, and go to state 45


State 51

    9 notExpression: specialExpr .

    $default  reduce using rule 9 (notExpression)


State 52

   11 signExpression: notExpression .

    $default  reduce using rule 11 (signExpression)


State 53

   14 multiplicativeExpression: signExpression .

    $default  reduce using rule 14 (multiplicativeExpression)


State 54

   15 multiplicativeExpression: multiplicativeExpression . OP_MUL signExpression
   16                         | multiplicativeExpression . OP_DIV signExpression
   17                         | multiplicativeExpression . OP_MOD signExpression
   18 additiveExpression: multiplicativeExpression .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, OP_PLUS, OP_MINUS, OP_EQUALS, OP_NOT_EQUALS, OP_SMALLER, OP_SMALLER_EQUALS, DEL_SEMICOLON, DEL_RIGHT_PARENTESIS, DEL_COMMA, DEL_RIGHT_BRACKETS]

    OP_MUL  shift, and go to state 76
    OP_DIV  shift, and go to state 77
    OP_MOD  shift, and go to state 78

    $default  reduce using rule 18 (additiveExpression)


State 55

   19 additiveExpression: additiveExpression . OP_PLUS multiplicativeExpression
   20                   | additiveExpression . OP_MINUS multiplicativeExpression
   21 relationalExpression: additiveExpression .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, OP_EQUALS, OP_NOT_EQUALS, OP_SMALLER, OP_SMALLER_EQUALS, DEL_SEMICOLON, DEL_RIGHT_PARENTESIS, DEL_COMMA, DEL_RIGHT_BRACKETS]

    OP_PLUS   shift, and go to state 79
    OP_MINUS  shift, and go to state 80

    $default  reduce using rule 21 (relationalExpression)


State 56

   22 relationalExpression: relationalExpression . OP_EQUALS additiveExpression
   23                     | relationalExpression . OP_NOT_EQUALS additiveExpression
   24                     | relationalExpression . OP_SMALLER additiveExpression
   25                     | relationalExpression . OP_SMALLER_EQUALS additiveExpression
   26 logicalAndExpression: relationalExpression .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, DEL_SEMICOLON, DEL_RIGHT_PARENTESIS, DEL_COMMA, DEL_RIGHT_BRACKETS]

    OP_EQUALS          shift, and go to state 81
    OP_NOT_EQUALS      shift, and go to state 82
    OP_SMALLER         shift, and go to state 83
    OP_SMALLER_EQUALS  shift, and go to state 84

    $default  reduce using rule 26 (logicalAndExpression)


State 57

   27 logicalAndExpression: logicalAndExpression . KW_OR relationalExpression
   28                     | logicalAndExpression . KW_AND relationalExpression
   29 expression: logicalAndExpression .  [KW_THEN, KW_LOOP, DEL_SEMICOLON, DEL_RIGHT_PARENTESIS, DEL_COMMA, DEL_RIGHT_BRACKETS]

    KW_AND  shift, and go to state 85
    KW_OR   shift, and go to state 86
